--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
 /**********************************************
 *** GENERAL
 **********************************************/
-
+.final-score{
+    position: absolute;
+    transform: translateX(-50%);
+    left:50%;
+    top:520px;
+    color:#555;
+    font-family: 'Lato';
+    padding:10px;
+    width:160px;
+    text-transform: uppercase;
+    border:none;
+    border:1px solid rgb(116, 228, 25);
+}
+.final-score:focus{
+    outline:none;
+}
 * {
     margin: 0;
     padding: 0;
